--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "monolog/monolog": "^1.17",
         "illuminate/database": "^5.2",
         "robmorgan/phinx": "^0.6.2",
-        "Illuminate/Pagination": "^5.2"
+        "Illuminate/Pagination": "^5.2",
+        "paypal/adaptivepayments-sdk-php": "^3.9"
     }
 }
