--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,16 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17",
-        "illuminate/database": "^5.2",
-        "robmorgan/phinx": "^0.6.2",
-        "Illuminate/Pagination": "^5.2",
-        "paypal/adaptivepayments-sdk-php": "^3.9"
+      "php": ">=5.5.0",
+      "slim/slim": "^3.1",
+      "slim/php-view": "^2.0",
+      "monolog/monolog": "^1.17",
+      "illuminate/database": "^5.2",
+      "robmorgan/phinx": "^0.6.2",
+      "Illuminate/Pagination": "^5.2",
+      "paypal/adaptivepayments-sdk-php": "^3.9"
+    },
+    "autoload": {
+      "psr-4": {"": "src/"}
     }
 }
