--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
       "robmorgan/phinx": "^0.6.2",
       "Illuminate/Pagination": "^5.2",
       "paypal/adaptivepayments-sdk-php": "^3.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
