--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,6 @@
       "paypal/adaptivepayments-sdk-php": "^3.9"
     },
     "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
+      "psr-4": {"App\\": "app/"}
     }
 }
